--- a/Homework/HW_01.ipynb
+++ b/Homework/HW_01.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Name: Alejandro Roa Contreras\n",
+    "\n",
+    "Question 1: Use a programming language of your choice to save today's date to a variable. Then, include the date in the text below the code block. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's date is: 10/14/2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Save variable\n",
+    "today_date = datetime.today().date()\n",
+    "today_date\n",
+    "formatted_date = today_date.strftime(\"%m/%d/%Y\")\n",
+    "msg = \"Today's date is:\"\n",
+    "print(msg, formatted_date)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +42,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
