turning in HW_01

--- a/Homework/HW_01.ipynb
+++ b/Homework/HW_01.ipynb
@@ -30,15 +30,8 @@
     "today_date\n",
     "formatted_date = today_date.strftime(\"%m/%d/%Y\")\n",
     "msg = \"Today's date is:\"\n",
-    "print(msg, formatted_date)"
+    "print(msg, formatted_date)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
