--- a/Homework/HW_2.ipynb
+++ b/Homework/HW_2.ipynb
@@ -49,12 +49,568 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Task 1 - NRI Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Import the NRI data. Ensure that the [FIPS code](https://en.wikipedia.org/wiki/Federal_Information_Processing_Standard_state_code) variable ('STCOFIPS') is correctly identified as a string / character variable. Otherwise, the leading zeros will be removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NRI_data = pd.read_csv('/Users/alejandroroacontreras/Library/CloudStorage/GoogleDrive-alejandro.roa.cs@gmail.com/Mi unidad/Pardee Rand Graduate School/Year 2/Introduction to ML/code/PRGS-Intro-to-ML-2024/data/raw/NRI_counties_level.csv', dtype={'STCOFIPS':str})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OID_</th>\n",
+       "      <th>NRI_ID</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>STATEABBRV</th>\n",
+       "      <th>STATEFIPS</th>\n",
+       "      <th>COUNTY</th>\n",
+       "      <th>COUNTYTYPE</th>\n",
+       "      <th>COUNTYFIPS</th>\n",
+       "      <th>STCOFIPS</th>\n",
+       "      <th>POPULATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WNTW_EALS</th>\n",
+       "      <th>WNTW_EALR</th>\n",
+       "      <th>WNTW_ALRB</th>\n",
+       "      <th>WNTW_ALRP</th>\n",
+       "      <th>WNTW_ALRA</th>\n",
+       "      <th>WNTW_ALR_NPCTL</th>\n",
+       "      <th>WNTW_RISKV</th>\n",
+       "      <th>WNTW_RISKS</th>\n",
+       "      <th>WNTW_RISKR</th>\n",
+       "      <th>NRI_VER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C01001</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>58764</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15.784587</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>2.687716e-07</td>\n",
+       "      <td>7.410082e-09</td>\n",
+       "      <td>8.725777e-06</td>\n",
+       "      <td>10.461158</td>\n",
+       "      <td>8494.906508</td>\n",
+       "      <td>12.217626</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>March 2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>C01003</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>County</td>\n",
+       "      <td>3</td>\n",
+       "      <td>01003</td>\n",
+       "      <td>231365</td>\n",
+       "      <td>...</td>\n",
+       "      <td>56.205509</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>1.268231e-09</td>\n",
+       "      <td>2.287120e-08</td>\n",
+       "      <td>1.548360e-07</td>\n",
+       "      <td>13.339523</td>\n",
+       "      <td>65619.701638</td>\n",
+       "      <td>52.083996</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>March 2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C01005</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Barbour</td>\n",
+       "      <td>County</td>\n",
+       "      <td>5</td>\n",
+       "      <td>01005</td>\n",
+       "      <td>25160</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.632002</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>5.788050e-07</td>\n",
+       "      <td>2.347236e-08</td>\n",
+       "      <td>7.606598e-07</td>\n",
+       "      <td>16.125039</td>\n",
+       "      <td>15501.730335</td>\n",
+       "      <td>19.535476</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>March 2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>C01007</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bibb</td>\n",
+       "      <td>County</td>\n",
+       "      <td>7</td>\n",
+       "      <td>01007</td>\n",
+       "      <td>22239</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.308573</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>9.014679e-07</td>\n",
+       "      <td>1.270300e-08</td>\n",
+       "      <td>1.202015e-05</td>\n",
+       "      <td>16.991643</td>\n",
+       "      <td>7496.186940</td>\n",
+       "      <td>11.104041</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>March 2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>C01009</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Blount</td>\n",
+       "      <td>County</td>\n",
+       "      <td>9</td>\n",
+       "      <td>01009</td>\n",
+       "      <td>58992</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23.645930</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>5.268425e-07</td>\n",
+       "      <td>1.482016e-08</td>\n",
+       "      <td>2.002965e-07</td>\n",
+       "      <td>12.039616</td>\n",
+       "      <td>17175.160729</td>\n",
+       "      <td>21.444480</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>March 2023</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 465 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OID_  NRI_ID    STATE STATEABBRV  STATEFIPS   COUNTY COUNTYTYPE  \\\n",
+       "0     1  C01001  Alabama         AL          1  Autauga     County   \n",
+       "1     2  C01003  Alabama         AL          1  Baldwin     County   \n",
+       "2     3  C01005  Alabama         AL          1  Barbour     County   \n",
+       "3     4  C01007  Alabama         AL          1     Bibb     County   \n",
+       "4     5  C01009  Alabama         AL          1   Blount     County   \n",
+       "\n",
+       "   COUNTYFIPS STCOFIPS  POPULATION  ...  WNTW_EALS            WNTW_EALR  \\\n",
+       "0           1    01001       58764  ...  15.784587             Very Low   \n",
+       "1           3    01003      231365  ...  56.205509  Relatively Moderate   \n",
+       "2           5    01005       25160  ...  18.632002       Relatively Low   \n",
+       "3           7    01007       22239  ...  13.308573             Very Low   \n",
+       "4           9    01009       58992  ...  23.645930       Relatively Low   \n",
+       "\n",
+       "      WNTW_ALRB     WNTW_ALRP     WNTW_ALRA WNTW_ALR_NPCTL    WNTW_RISKV  \\\n",
+       "0  2.687716e-07  7.410082e-09  8.725777e-06      10.461158   8494.906508   \n",
+       "1  1.268231e-09  2.287120e-08  1.548360e-07      13.339523  65619.701638   \n",
+       "2  5.788050e-07  2.347236e-08  7.606598e-07      16.125039  15501.730335   \n",
+       "3  9.014679e-07  1.270300e-08  1.202015e-05      16.991643   7496.186940   \n",
+       "4  5.268425e-07  1.482016e-08  2.002965e-07      12.039616  17175.160729   \n",
+       "\n",
+       "   WNTW_RISKS      WNTW_RISKR     NRI_VER  \n",
+       "0   12.217626        Very Low  March 2023  \n",
+       "1   52.083996  Relatively Low  March 2023  \n",
+       "2   19.535476        Very Low  March 2023  \n",
+       "3   11.104041        Very Low  March 2023  \n",
+       "4   21.444480        Very Low  March 2023  \n",
+       "\n",
+       "[5 rows x 465 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NRI_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(NRI_data['STCOFIPS'].dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Subset the NRI data to include only the 5-digit state/county FIPS code and all colums ending with '\\_AFREQ' and '\\_RISKR'. Each of these columns represents a different hazard type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3231, 465)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NRI_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STCOFIPS_column = 'STCOFIPS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_selection = [STCOFIPS_column] + [col for col in NRI_data.columns if col.endswith('_AFREQ') or col.endswith('_RISKR')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_NRI = NRI_data[columns_selection]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STCOFIPS</th>\n",
+       "      <th>AVLN_AFREQ</th>\n",
+       "      <th>AVLN_RISKR</th>\n",
+       "      <th>CFLD_AFREQ</th>\n",
+       "      <th>CFLD_RISKR</th>\n",
+       "      <th>CWAV_AFREQ</th>\n",
+       "      <th>CWAV_RISKR</th>\n",
+       "      <th>DRGT_AFREQ</th>\n",
+       "      <th>DRGT_RISKR</th>\n",
+       "      <th>ERQK_AFREQ</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TRND_AFREQ</th>\n",
+       "      <th>TRND_RISKR</th>\n",
+       "      <th>TSUN_AFREQ</th>\n",
+       "      <th>TSUN_RISKR</th>\n",
+       "      <th>VLCN_AFREQ</th>\n",
+       "      <th>VLCN_RISKR</th>\n",
+       "      <th>WFIR_AFREQ</th>\n",
+       "      <th>WFIR_RISKR</th>\n",
+       "      <th>WNTW_AFREQ</th>\n",
+       "      <th>WNTW_RISKR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Rating</td>\n",
+       "      <td>25.969774</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>0.000431</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.480184</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>0.433437</td>\n",
+       "      <td>Very Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>3.684142</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Rating</td>\n",
+       "      <td>12.353442</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>0.000338</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.953140</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Insufficient Data</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.002229</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>0.182759</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Rating</td>\n",
+       "      <td>43.956953</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>0.000227</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.739018</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.000038</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>0.185759</td>\n",
+       "      <td>Very Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01007</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Rating</td>\n",
+       "      <td>28.894501</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>0.000790</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.586160</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>0.743034</td>\n",
+       "      <td>Very Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01009</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Rating</td>\n",
+       "      <td>28.152598</td>\n",
+       "      <td>Relatively Low</td>\n",
+       "      <td>0.000817</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.710332</td>\n",
+       "      <td>Relatively Moderate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>Very Low</td>\n",
+       "      <td>0.866873</td>\n",
+       "      <td>Very Low</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  STCOFIPS  AVLN_AFREQ      AVLN_RISKR  CFLD_AFREQ      CFLD_RISKR  \\\n",
+       "0    01001         NaN  Not Applicable         NaN  Not Applicable   \n",
+       "1    01003         NaN  Not Applicable    3.684142  Relatively Low   \n",
+       "2    01005         NaN  Not Applicable         NaN  Not Applicable   \n",
+       "3    01007         NaN  Not Applicable         NaN  Not Applicable   \n",
+       "4    01009         NaN  Not Applicable         NaN  Not Applicable   \n",
+       "\n",
+       "   CWAV_AFREQ CWAV_RISKR  DRGT_AFREQ           DRGT_RISKR  ERQK_AFREQ  ...  \\\n",
+       "0         0.0  No Rating   25.969774       Relatively Low    0.000431  ...   \n",
+       "1         0.0  No Rating   12.353442  Relatively Moderate    0.000338  ...   \n",
+       "2         0.0  No Rating   43.956953       Relatively Low    0.000227  ...   \n",
+       "3         0.0  No Rating   28.894501             Very Low    0.000790  ...   \n",
+       "4         0.0  No Rating   28.152598       Relatively Low    0.000817  ...   \n",
+       "\n",
+       "  TRND_AFREQ           TRND_RISKR TSUN_AFREQ         TSUN_RISKR VLCN_AFREQ  \\\n",
+       "0   0.480184  Relatively Moderate        NaN     Not Applicable        NaN   \n",
+       "1   0.953140  Relatively Moderate        NaN  Insufficient Data        NaN   \n",
+       "2   0.739018  Relatively Moderate        NaN     Not Applicable        NaN   \n",
+       "3   0.586160  Relatively Moderate        NaN     Not Applicable        NaN   \n",
+       "4   0.710332  Relatively Moderate        NaN     Not Applicable        NaN   \n",
+       "\n",
+       "       VLCN_RISKR WFIR_AFREQ           WFIR_RISKR WNTW_AFREQ      WNTW_RISKR  \n",
+       "0  Not Applicable   0.000035             Very Low   0.433437        Very Low  \n",
+       "1  Not Applicable   0.002229  Relatively Moderate   0.182759  Relatively Low  \n",
+       "2  Not Applicable   0.000038             Very Low   0.185759        Very Low  \n",
+       "3  Not Applicable   0.000040             Very Low   0.743034        Very Low  \n",
+       "4  Not Applicable   0.000035             Very Low   0.866873        Very Low  \n",
+       "\n",
+       "[5 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset_NRI.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Create a table / dataframe that, for each hazard type, shows the number of missing values in the '\\_AFREQ' and '\\_RISKR' columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
