--- a/Homework/HW_2.ipynb
+++ b/Homework/HW_2.ipynb
@@ -589,9 +589,253 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "missing_values= subset_NRI.isnull().sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "afreq_missing = []\n",
+    "riskr_missing = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in missing_values.index:\n",
+    "    if col.endswith('_AFREQ'):\n",
+    "        afreq_missing.append({'Column': col, 'Missing_Count': missing_values[col]})\n",
+    "    elif col.endswith('_RISKR'):\n",
+    "        riskr_missing.append({'Column': col, 'Missing_Count': missing_values[col]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "afreq_df = pd.DataFrame(afreq_missing)\n",
+    "riskr_df = pd.DataFrame(riskr_missing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "afreq_df['Hazard_Type'] = afreq_df['Column'].str.replace('_AFREQ', '', regex=False)\n",
+    "riskr_df['Hazard_Type'] = riskr_df['Column'].str.replace('_RISKR', '', regex=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_table = pd.merge(afreq_df[['Hazard_Type', 'Missing_Count']], \n",
+    "                    riskr_df[['Hazard_Type', 'Missing_Count']], \n",
+    "                    on='Hazard_Type', suffixes=('_AFREQ', '_RISKR'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_table = pd.merge(afreq_df[['Hazard_Type', 'Missing_Count']], \n",
+    "                    riskr_df[['Hazard_Type', 'Missing_Count']], \n",
+    "                    on='Hazard_Type', suffixes=('_AFREQ', '_RISKR'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hazard_Type</th>\n",
+       "      <th>Missing_Count_AFREQ</th>\n",
+       "      <th>Missing_Count_RISKR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VLCN</td>\n",
+       "      <td>3125</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TSUN</td>\n",
+       "      <td>3103</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AVLN</td>\n",
+       "      <td>3023</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CFLD</td>\n",
+       "      <td>2646</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HRCN</td>\n",
+       "      <td>918</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ISTM</td>\n",
+       "      <td>229</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>LTNG</td>\n",
+       "      <td>123</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>WFIR</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>LNDS</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>TRND</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>SWND</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>HAIL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>DRGT</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>RFLD</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>WNTW</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>HWAV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>ERQK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>CWAV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Hazard_Type  Missing_Count_AFREQ  Missing_Count_RISKR\n",
+       "0         VLCN                 3125                    0\n",
+       "1         TSUN                 3103                    0\n",
+       "2         AVLN                 3023                    0\n",
+       "3         CFLD                 2646                    0\n",
+       "4         HRCN                  918                    0\n",
+       "5         ISTM                  229                    0\n",
+       "6         LTNG                  123                    0\n",
+       "7         WFIR                   88                    0\n",
+       "8         LNDS                   40                    0\n",
+       "9         TRND                    7                    0\n",
+       "10        SWND                    7                    0\n",
+       "11        HAIL                    7                    0\n",
+       "12        DRGT                    7                    0\n",
+       "13        RFLD                    0                    0\n",
+       "14        WNTW                    0                    0\n",
+       "15        HWAV                    0                    0\n",
+       "16        ERQK                    0                    0\n",
+       "17        CWAV                    0                    0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_table"
+   ]
   }
  ],
  "metadata": {
