--- a/Homework/HW_2.ipynb
+++ b/Homework/HW_2.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "17        CWAV                    0                    0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,6 +836,125 @@
    "source": [
     "final_table"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Create a new column in the original data table indicating whether or not 'AVLN_AFREQ' is missing or observed. Show the cross-tabulation of the 'AVLN_AFREQ' missingness and 'AVLN_RISKR' columns (including missing values). What do you observe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NRI_data['AVLN_AFREQ_Missing'] = NRI_data['AVLN_AFREQ'].isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_tab = pd.crosstab(NRI_data['AVLN_AFREQ_Missing'], NRI_data['AVLN_RISKR'], dropna=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>AVLN_RISKR</th>\n",
+       "      <th>Not Applicable</th>\n",
+       "      <th>Relatively High</th>\n",
+       "      <th>Relatively Low</th>\n",
+       "      <th>Relatively Moderate</th>\n",
+       "      <th>Very High</th>\n",
+       "      <th>Very Low</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVLN_AFREQ_Missing</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>52</td>\n",
+       "      <td>33</td>\n",
+       "      <td>9</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>3023</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "AVLN_RISKR          Not Applicable  Relatively High  Relatively Low  \\\n",
+       "AVLN_AFREQ_Missing                                                    \n",
+       "False                            0               15              52   \n",
+       "True                          3023                0               0   \n",
+       "\n",
+       "AVLN_RISKR          Relatively Moderate  Very High  Very Low  \n",
+       "AVLN_AFREQ_Missing                                            \n",
+       "False                                33          9        99  \n",
+       "True                                  0          0         0  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
