components to retain

--- a/Homework/HW_03.ipynb
+++ b/Homework/HW_03.ipynb
@@ -1675,6 +1675,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PC1 focuses on identifying the variables that explain the largest amount of variance in the data.  This component captures socio-economic stress factors such as poverty, unemployment, crowding, and housing burden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PC2 captures additional variance orthogonal to PC1 . In this case, PC2 captures disparities related to minority status, limited English proficiency, and low education levels. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PC3 captures variance not explained by the first two components. This component focuses on age-related and healthcare vulnerabilities, highlighting age-related and healthcare vulnerabilities, reflecting areas with high proportions of elderly individuals, uninsured populations, and educational barriers. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. There are several different ways to determine the number of principal components to retain. One common method is to retain principal components that explain a certain percentage of the variance in the data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### a. How many principal components are needed to explain 80% of the variance in the data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cumulative_variance = np.cumsum(pca.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_components_80 = np.searchsorted(cumulative_variance, 0.80) + 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of components needed to explain at least 80% of the variance: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of components needed to explain at least 80% of the variance: {n_components_80}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b. How many principal components are needed to explain 90% of the variance in the data?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_components_90 = np.searchsorted(cumulative_variance, 0.90) + 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of components needed to explain at least 90% of the variance: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of components needed to explain at least 90% of the variance: {n_components_90}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
