--- a/Homework/HW_04.ipynb
+++ b/Homework/HW_04.ipynb
@@ -1,6 +1,561 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Due Date: 2024-11-13 at 8:30 AM PT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Name: Alejandro Roa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework - Regression Trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The goal of this analysis is to use a regression tree to predict the number of per-capita COVID-19 deaths in each county in the US using the SVI variables.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Load the data file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_data = pd.read_csv('../data/processed/svi_covid.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>fips_code</th>\n",
+       "      <th>total_cases_per_100k</th>\n",
+       "      <th>total_deaths_per_100k</th>\n",
+       "      <th>E_TOTPOP</th>\n",
+       "      <th>EP_POV150</th>\n",
+       "      <th>EP_UNEMP</th>\n",
+       "      <th>EP_HBURD</th>\n",
+       "      <th>EP_NOHSDP</th>\n",
+       "      <th>EP_UNINSUR</th>\n",
+       "      <th>...</th>\n",
+       "      <th>EP_DISABL</th>\n",
+       "      <th>EP_SNGPNT</th>\n",
+       "      <th>EP_LIMENG</th>\n",
+       "      <th>EP_MINRTY</th>\n",
+       "      <th>EP_MUNIT</th>\n",
+       "      <th>EP_MOBILE</th>\n",
+       "      <th>EP_CROWD</th>\n",
+       "      <th>EP_NOVEH</th>\n",
+       "      <th>EP_GROUPQ</th>\n",
+       "      <th>EP_NOINT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>33888.123075</td>\n",
+       "      <td>399.925120</td>\n",
+       "      <td>58761</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>19.7</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>10.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>30212.064090</td>\n",
+       "      <td>313.169394</td>\n",
+       "      <td>233420</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>10.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>30477.951521</td>\n",
+       "      <td>418.056840</td>\n",
+       "      <td>24877</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>25.1</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>55.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>31.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>36623.073120</td>\n",
+       "      <td>498.853984</td>\n",
+       "      <td>22251</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>25.8</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>20.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>31944.750072</td>\n",
+       "      <td>441.796300</td>\n",
+       "      <td>59077</td>\n",
+       "      <td>22.9</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>23.9</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>996</td>\n",
+       "      <td>21019</td>\n",
+       "      <td>48575.929688</td>\n",
+       "      <td>451.888396</td>\n",
+       "      <td>48242</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.9</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>13.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>997</td>\n",
+       "      <td>21021</td>\n",
+       "      <td>37800.934244</td>\n",
+       "      <td>565.119394</td>\n",
+       "      <td>30613</td>\n",
+       "      <td>25.3</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>998</td>\n",
+       "      <td>21023</td>\n",
+       "      <td>33230.403800</td>\n",
+       "      <td>344.418052</td>\n",
+       "      <td>8420</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>25.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>16.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>999</td>\n",
+       "      <td>21025</td>\n",
+       "      <td>40640.648012</td>\n",
+       "      <td>567.010309</td>\n",
+       "      <td>13580</td>\n",
+       "      <td>38.3</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>38.4</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>25.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>21027</td>\n",
+       "      <td>32998.830865</td>\n",
+       "      <td>433.554170</td>\n",
+       "      <td>20528</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>22.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  fips_code  total_cases_per_100k  total_deaths_per_100k  \\\n",
+       "0             1       1001          33888.123075             399.925120   \n",
+       "1             2       1003          30212.064090             313.169394   \n",
+       "2             3       1005          30477.951521             418.056840   \n",
+       "3             4       1007          36623.073120             498.853984   \n",
+       "4             5       1009          31944.750072             441.796300   \n",
+       "..          ...        ...                   ...                    ...   \n",
+       "995         996      21019          48575.929688             451.888396   \n",
+       "996         997      21021          37800.934244             565.119394   \n",
+       "997         998      21023          33230.403800             344.418052   \n",
+       "998         999      21025          40640.648012             567.010309   \n",
+       "999        1000      21027          32998.830865             433.554170   \n",
+       "\n",
+       "     E_TOTPOP  EP_POV150  EP_UNEMP  EP_HBURD  EP_NOHSDP  EP_UNINSUR  ...  \\\n",
+       "0       58761       20.2       2.8      19.7        9.6         7.4  ...   \n",
+       "1      233420       18.3       3.4      23.2        8.4         9.3  ...   \n",
+       "2       24877       37.7       5.8      25.1       23.5        10.7  ...   \n",
+       "3       22251       29.0       8.7      23.2       21.1         8.4  ...   \n",
+       "4       59077       22.9       6.0      19.4       18.2        10.2  ...   \n",
+       "..        ...        ...       ...       ...        ...         ...  ...   \n",
+       "995     48242       26.8       6.9      23.3       11.3         5.4  ...   \n",
+       "996     30613       25.3       6.2      27.5        9.6         5.9  ...   \n",
+       "997      8420       27.8       6.2      17.5       12.0         4.1  ...   \n",
+       "998     13580       38.3       8.9      18.6       20.5         3.7  ...   \n",
+       "999     20528       34.6       7.7      16.1       14.9         8.3  ...   \n",
+       "\n",
+       "     EP_DISABL  EP_SNGPNT  EP_LIMENG  EP_MINRTY  EP_MUNIT  EP_MOBILE  \\\n",
+       "0         16.4        5.6        0.4       27.4       3.9       15.6   \n",
+       "1         13.9        4.2        0.8       17.7      16.6       10.2   \n",
+       "2         18.1       11.3        2.0       55.4       1.4       29.2   \n",
+       "3         19.6        7.2        0.3       25.8       2.7       30.6   \n",
+       "4         17.0        5.3        2.2       14.3       0.9       23.9   \n",
+       "..         ...        ...        ...        ...       ...        ...   \n",
+       "995       21.9        7.6        0.2        7.8       4.9       10.1   \n",
+       "996       17.3        7.2        0.5       15.5       2.3        5.3   \n",
+       "997       17.0        5.7        0.0        4.5       2.6       25.9   \n",
+       "998       30.6        6.3        0.1        3.9       1.1       38.4   \n",
+       "999       21.0        5.8        0.7        7.0       1.2       27.5   \n",
+       "\n",
+       "     EP_CROWD  EP_NOVEH  EP_GROUPQ  EP_NOINT  \n",
+       "0         1.4       4.0        0.9      10.9  \n",
+       "1         1.9       2.3        1.5      10.9  \n",
+       "2         3.8      11.7       12.0      31.8  \n",
+       "3         1.3       7.5        6.4      20.2  \n",
+       "4         2.3       4.8        1.0      16.9  \n",
+       "..        ...       ...        ...       ...  \n",
+       "995       1.0       8.7        3.6      13.9  \n",
+       "996       0.4       5.8        9.4      15.5  \n",
+       "997       1.9       2.6        0.3      16.6  \n",
+       "998       3.6      13.3        2.2      25.1  \n",
+       "999       2.2       4.9        1.5      22.7  \n",
+       "\n",
+       "[1000 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covid_data.head(1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Write the following functions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - A function that fits a regression tree to data. The function should take as input the data, the outcome variable, the predictor variables, and the maximum depth of the tree. The function should return the fitted tree.\n",
+    "#### Note: Many packages have functions that penalize the complexity of the tree to avoide overfitting. You should make sure that the function you write does not use any penalization for the complexity of the tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = covid_data[predictors_var]\n",
+    "outcome = covid_data[outcome_var]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_tree = DecisionTreeRegressor(max_depth=max_depth)\n",
+    "reg_tree.fit(predictors, outcome)\n",
+    "\n",
+    "return reg_tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - A function that predicts the outcome variable using a fitted tree. The function should take as input the fitted tree and the data for which to make predictions. The function should return the predicted values.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = predict_with_tree(reg_tree, predictors)\n",
+    "\n",
+    "return prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - A function that calculates the mean squared error of the predictions. The function should take as input the predicted values and the true values. The function should return the mean squared error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse = mean_squared_error(true, prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Use 5-fold cross-validation to calculate the mean squared error of the regression tree for maximum tree depths 1, ..., 10."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Depth 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.tree import DecisionTreeRegressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +564,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
