--- a/homework/HW_05.ipynb
+++ b/homework/HW_05.ipynb
@@ -522,13 +522,13 @@
     "class NeuralNetwork(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(NeuralNetwork, self).__init__()\n",
-    "        self.hidden = nn.Linear(len(predictor_columns), 10)  # Hidden layer with 10 nodes\n",
-    "        self.output = nn.Linear(10, 1)                      # Output layer\n",
-    "        self.relu = nn.ReLU()                               # ReLU activation\n",
+    "        self.hidden = nn.Linear(len(predictor_columns), 10)  \n",
+    "        self.output = nn.Linear(10, 1)                      \n",
+    "        self.relu = nn.ReLU()                              \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.relu(self.hidden(x))  # Apply ReLU\n",
-    "        x = self.output(x)             # Final output\n",
+    "        x = self.relu(self.hidden(x))  \n",
+    "        x = self.output(x)             \n",
     "        return x\n",
     "\n",
     "model = NeuralNetwork()\n",
@@ -631,10 +631,10 @@
     "        self.leaky_relu = nn.LeakyReLU()   \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.relu(self.hidden1(x))   # First hidden layer with ReLU\n",
-    "        x = self.leaky_relu(self.hidden2(x))  # Second hidden layer with Leaky ReLU\n",
-    "        x = self.relu(self.hidden3(x))   # Third hidden layer with ReLU\n",
-    "        x = self.output(x)               # Output layer\n",
+    "        x = self.relu(self.hidden1(x))   \n",
+    "        x = self.leaky_relu(self.hidden2(x)) \n",
+    "        x = self.relu(self.hidden3(x))  \n",
+    "        x = self.output(x)               \n",
     "        return x                  "
    ]
   },
